--- a/resources/views/emails/password_reset_email_html.edge
+++ b/resources/views/emails/password_reset_email_html.edge
@@ -24,7 +24,7 @@
               <p>Witaj {{ userName }},</p>
               <p>Otrzymaliśmy prośbę o zresetowanie Twojego hasła. Kliknij poniższy przycisk, aby kontynuować:</p>
               <p style="text-align: center; margin: 30px 0;">
-                <a href="{{ passwordResetUrl }}"
+                <a href="https://eventownik.solvro.pl/auth/password-reset?token={{ passwordResetUrl }}"
                   style="background-color: #3571fd; color: #ffffff; padding: 14px 28px; text-decoration: none; border-radius: 6px; display: inline-block; font-weight: bold;">
                   Zresetuj Hasło
                 </a>
